// Vitest Snapshot v1

exports[`CdrAccordionGroup > when unwrapped > renders correctly 1`] = `
<div
  class="cdr-accordion-group"
>
  <!-- @slot CdrAccordionGroup content (i.e. CdrAccordion components) -->
  
  <div
    class=""
    id="tab1-accordion"
  >
    <h2
      class="cdr-accordion__header--unwrapped"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <div
        class="js-cdr-accordion-button"
        id="tab1"
      >
        <span
          class="cdr-accordion__label"
          id="tab1-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label1
          
        </span>
        <!--v-if-->
      </div>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
      style="max-height: none;"
    >
      <div
        class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
        id="tab1-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  <div
    class=""
    id="tab2-accordion"
  >
    <h2
      class="cdr-accordion__header--unwrapped"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <div
        class="js-cdr-accordion-button"
        id="tab2"
      >
        <span
          class="cdr-accordion__label"
          id="tab2-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label2
          
        </span>
        <!--v-if-->
      </div>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
      style="max-height: none;"
    >
      <div
        class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
        id="tab2-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  <div
    class=""
    id="tab3-accordion"
  >
    <h2
      class="cdr-accordion__header--unwrapped"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <div
        class="js-cdr-accordion-button"
        id="tab3"
      >
        <span
          class="cdr-accordion__label"
          id="tab3-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label3
          
        </span>
        <!--v-if-->
      </div>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
      style="max-height: none;"
    >
      <div
        class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
        id="tab3-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`CdrAccordionGroup > when wrapped > renders correctly 1`] = `
<div
  class="cdr-accordion-group"
>
  <!-- @slot CdrAccordionGroup content (i.e. CdrAccordion components) -->
  
  <div
    class="cdr-accordion cdr-accordion--focused"
    id="tab1-accordion"
  >
    <h2
      class="cdr-accordion__header"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <button
        aria-controls="tab1-collapsible"
        aria-expanded="false"
        class="cdr-accordion__button js-cdr-accordion-button"
        id="tab1"
      >
        <span
          class="cdr-accordion__label"
          id="tab1-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label1
          
        </span>
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-accordion__icon cdr-accordion--closed"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <path
            d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
            role="presentation"
          />
          
          <!--v-if-->
        </svg>
      </button>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--closed"
      style="max-height: 0px;"
    >
      <div
        aria-hidden="true"
        class="cdr-accordion__content cdr-accordion--closed"
        id="tab1-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  <div
    class="cdr-accordion"
    id="tab2-accordion"
  >
    <h2
      class="cdr-accordion__header"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <button
        aria-controls="tab2-collapsible"
        aria-expanded="false"
        class="cdr-accordion__button js-cdr-accordion-button"
        id="tab2"
      >
        <span
          class="cdr-accordion__label"
          id="tab2-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label2
          
        </span>
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-accordion__icon cdr-accordion--closed"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <path
            d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
            role="presentation"
          />
          
          <!--v-if-->
        </svg>
      </button>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--closed"
      style="max-height: 0px;"
    >
      <div
        aria-hidden="true"
        class="cdr-accordion__content cdr-accordion--closed"
        id="tab2-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  <div
    class="cdr-accordion"
    id="tab3-accordion"
  >
    <h2
      class="cdr-accordion__header"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <button
        aria-controls="tab3-collapsible"
        aria-expanded="false"
        class="cdr-accordion__button js-cdr-accordion-button"
        id="tab3"
      >
        <span
          class="cdr-accordion__label"
          id="tab3-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label3
          
        </span>
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-accordion__icon cdr-accordion--closed"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <path
            d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
            role="presentation"
          />
          
          <!--v-if-->
        </svg>
      </button>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--closed"
      style="max-height: 0px;"
    >
      <div
        aria-hidden="true"
        class="cdr-accordion__content cdr-accordion--closed"
        id="tab3-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`CdrAccordionGroup > with string value for unwrapped prop > renders correctly 1`] = `
<div
  class="cdr-accordion-group"
>
  <!-- @slot CdrAccordionGroup content (i.e. CdrAccordion components) -->
  
  <div
    class=""
    id="tab1-accordion"
  >
    <h2
      class="cdr-accordion__header--unwrapped"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <div
        class="js-cdr-accordion-button"
        id="tab1"
      >
        <span
          class="cdr-accordion__label"
          id="tab1-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label1
          
        </span>
        <!--v-if-->
      </div>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
      style="max-height: none;"
    >
      <div
        class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
        id="tab1-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  <div
    class=""
    id="tab2-accordion"
  >
    <h2
      class="cdr-accordion__header--unwrapped"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <div
        class="js-cdr-accordion-button"
        id="tab2"
      >
        <span
          class="cdr-accordion__label"
          id="tab2-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label2
          
        </span>
        <!--v-if-->
      </div>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
      style="max-height: none;"
    >
      <div
        class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
        id="tab2-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  <div
    class=""
    id="tab3-accordion"
  >
    <h2
      class="cdr-accordion__header--unwrapped"
    >
      <!--
        Triggered on accordion open/close
        @event accordion-toggle
      -->
      <div
        class="js-cdr-accordion-button"
        id="tab3"
      >
        <span
          class="cdr-accordion__label"
          id="tab3-label"
        >
          <!-- @slot  Sets the readable text on the CdrAccordion button -->
          
          label3
          
        </span>
        <!--v-if-->
      </div>
    </h2>
    <div
      class="cdr-accordion__content-container cdr-accordion--open cdr-accordion--unwrap"
      style="max-height: none;"
    >
      <div
        class="cdr-accordion__content cdr-accordion--open cdr-accordion--unwrap"
        id="tab3-collapsible"
      >
        <!-- @slot CdrAccordion content -->
        
        
      </div>
    </div>
  </div>
  
</div>
`;
